latest changes -- swapped out capybara-webkit with poltergeist so it now works on VPS

--- a/config/database.yml
+++ b/config/database.yml
@@ -47,9 +47,8 @@ test:
   password:
 
 production:
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql2
+  encoding: utf8
   database: mogbeats_production
   pool: 5
-  username: mogbeats
-  password:
+
