--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,7 @@ development:
   pool: 5
   username: local
   password:
+  prepared_statements: false
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
